@@ -1,3 +1,9 @@
+2004-10-29  Bruno Haible  <bruno@clisp.org>
+
+	Allow handlers to override outer handlers.
+	* error.d (SIGNAL): Establish a catch frame around invoke_handlers()
+	invocation.
+
 2004-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* inspect.lisp (inspect-backend@structure-object): Protect against
